Writer adding parcel

--- a/writer/src/main/resources/application.properties
+++ b/writer/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+newpackages.per.day=100
+moves.per.day=80
+
