--- a/writer/src/main/resources/application.properties
+++ b/writer/src/main/resources/application.properties
@@ -7,4 +7,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 newpackages.per.day=100
 moves.per.day=80
+newpackages.delta=30
 
